--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^4.11.0",
