--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "cleanUrls": true,
   "builds": [
     {
-      "src": "/",
+      "src": "./frontend/index.html",
       "use": "@vercel/node"
     }
   ],
