--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "cleanUrls": true,
   "builds": [
     {
-      "src": "./frontend/index.html",
+      "src": "app.js",
       "use": "@vercel/node"
     }
   ],
